src/objects/Action_Plan_Goal__c.object
<CustomObject>
    <fields>
        <fullName>Action_Plan__c</fullName>
        <label>Action Plan</label>
        <referenceTo>Action_Plan__c</referenceTo>
        <relationshipLabel>Action Plan Goals</relationshipLabel>
        <relationshipName>Action_Plan_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>3500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Former_ID__c</fullName>
        <externalId>true</externalId>
        <label>Former ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Original_GoalID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates to goal ID on original Plan</description>
        <label>Short-term Goal</label>
        <referenceTo>Short_Term_Goal__c</referenceTo>
        <relationshipLabel>Action Plan Goals</relationshipLabel>
        <relationshipName>Action_Plan_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferenceID__c</fullName>
        <label>ReferenceID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isService__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag to indicate whether this goal is a service (used for IDD plans when defining service objectives)</description>
        <label>Service</label>
        <type>Checkbox</type>
    </fields>
    <label>Action Plan Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action_Plan__c</columns>
        <columns>Former_ID__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Description__c</columns>
        <columns>ReferenceID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Action_Plan__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APG-{00000}</displayFormat>
        <label>Action Plan Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plan Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Description_Req</fullName>
        <active>true</active>
        <errorConditionFormula>ISBlank(Description__c)</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Description is required</errorMessage>
    </validationRules>
</CustomObject>